# MiniBench

./: .gitattributes  .gitignore  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
config/experiments/: mahjong.yaml  mahjong_riichi.yaml  multiple_choice.yaml  one_stroke.yaml  one_stroke_euler_theorem.yaml  one_stroke_generated.yaml  one_stroke_generated_euler_theorem.yaml  xiangqi.yaml
data/: one_stroke_tasks.jsonl  tasks-limo.jsonl  tasks.jsonl  xiangqi_hard_tasks.jsonl  xiangqi_tasks.jsonl
data/mahjong/: tasks.jsonl
data/mahjong_riichi/: tasks.jsonl
data/mahjong_solo/: tasks_win.jsonl
data/multiple_choice/: tasks.jsonl
data/one_stroke/: tasks.jsonl  tasks_generated.jsonl
data/xiangqi/: ccpd_endgames.jsonl  hard_tasks.jsonl  tasks.jsonl
docs/: design-notes.md  task-authoring.md
examples/: akochan_wrapper.py  mortal_wrapper.py
output/pdf/: minibench_lecture.aux  minibench_lecture.out
scripts/: generate_ccpd_endgames.py  generate_mahjong_solo_tasks.py  generate_one_stroke_tasks.py  generate_xiangqi_capture_tasks.py  generate_xiangqi_pikafish_tasks.py
src/minibench/: __init__.py  agents.py  cli.py  dataset.py  evaluate.py  evaluation.py  (+19 more)
tests/: test_agent_factory.py  test_architecture_compat.py  test_cli_static_agents.py  test_evaluate_config.py  test_evaluation.py  test_extraction.py  test_mahjong.py  test_mahjong_riichi.py  test_mahjong_solo.py  test_one_stroke.py  test_one_stroke_generator.py  test_openai_compatible_agent.py  test_reasoning_agents.py  test_tasks.py  test_xiangqi_capture_generation.py  test_xiangqi_pikafish.py
(+82 files in other folders)
