[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-agent-bench"
version = "0.1.0"
description = "A tiny, reproducible starter benchmark for agent-style answer extraction and scoring."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MiniBench" }]
dependencies = [
    "gym-xiangqi",
    "mahjong>=2.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
minibench = "minibench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
